# ISB.AI

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
docs/: GLOSSARY.md
docs/adr/: ADR-001-caddy-ingress-reverse-proxy.md  ADR-002-task-queue-abstraction.md  ADR-003-authorization-port.md  ADR-004-api-contract-and-client-generation.md  ADR-005-distributed-locking-abstraction.md  ADR-006-secure-non-root-container.md  ADR-007-prediction-calibration-port.md  ADR-008-document-embedding-drope.md  ADR-009-out-of-process-model-serving.md  ADR-010-structured-llm-outputs-instructor.md  ADR-011-multimodal-ingestion-pipeline.md  ADR-012-vector-storage-hybrid-search.md  ADR-013-secrets-provisioning-validation.md  ADR-014-observability-architecture.md  ADR-015-gpu-infrastructure-caching.md  ADR-016-dependency-injection-composition-root.md  ADR-017-zero-downtime-database-migrations.md  ADR-018-cache-strategy-and-invalidation.md  ADR-019-kubernetes-deployment-and-self-healing.md  ADR-020-infrastructure-as-code-pulumi.md  ADR-021-software-versioning-semver.md  ADR-022-model-validation-and-evaluation.md  ADR-023-self-hosted-mlflow-model-registry.md  ADR-024-pipeline-orchestration-dramatiq.md  ADR-025-model-drift-monitoring-evidently.md  ADR-026-vulnerability-scanning-trivy.md  ADR-027-telemetry-collector.md  ADR-028-gpu-lock-arbitration.md
docs/specs/: EVAL-008-document-embedding.md  EVAL-010-structured-llm-outputs.md  EVAL-011-multimodal-ingestion.md  EVAL-012-vector-hybrid-search.md  SPEC-001-caddy-ingress-reverse-proxy.md  SPEC-002-task-queue-abstraction.md  SPEC-003-authorization-port.md  SPEC-004-api-contract-and-client-generation.md  SPEC-005-distributed-locking-abstraction.md  (+23 more)
mutants/: .gitignore  pyproject.toml
mutants/src/isb/: __init__.py  config.py  main.py
mutants/src/isb/knowledge_organization/: __init__.py
mutants/src/isb/knowledge_organization/adapters/prediction_calibrator/: conformal.py
mutants/src/isb/knowledge_organization/application/use_cases/: categorize_document.py
mutants/src/isb/knowledge_organization/domain/: document.py
mutants/src/isb/knowledge_organization/ports/: document_repository.py  prediction_calibrator.py
mutants/src/isb/presentation/: __init__.py  api.py
mutants/src/isb/shared_kernel/: __init__.py  events.py  types.py
mutants/src/isb/shared_kernel/adapters/: __init__.py
mutants/src/isb/shared_kernel/adapters/authorization/: __init__.py  local_rule.py
mutants/src/isb/shared_kernel/adapters/lock/: __init__.py  in_mem.py  redis.py
mutants/src/isb/shared_kernel/adapters/task_queue/: __init__.py  immediate.py  redis_dramatiq.py
mutants/src/isb/shared_kernel/ports/: authorization.py  lock.py  task_queue.py
mutants/tests/: __init__.py  conftest.py
mutants/tests/infrastructure/: __init__.py  test_caddy.py  test_redis_lock.py  verify_container.sh
mutants/tests/knowledge_organization/: test_categorize_document_use_case.py
mutants/tests/presentation/: test_api_exporter.py
mutants/tests/shared_kernel/: test_authorization.py
playground/: downloader.py  llm_processor.py  main.py  playlist.txt  sync_channels.py  transcriber.py
src/isb/: __init__.py  (+2 more)
tests/: conftest.py
(+37 files in other folders)
