[project]
name = "isb"
version = "0.1.0"
description = "Intelligent Second Brain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "mutmut>=2.4.0",
]


[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort (import sorting)
    "N",        # pep8-naming
    "UP",       # pyupgrade (modern python syntax)
    "B",        # flake8-bugbear (common design issues)
    "C4",       # flake8-comprehensions
    "ARG",      # flake8-unused-arguments
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "RUF",      # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest"

